# TimbreSwap

./: README.md  pyproject.toml  run_timbrematcher.py
config/: defaults.yml
src/rhythmslicer/: analysis.py  cli.py  config.py  export.py  pipeline.py  processing.py
src/timbrematcher/: __init__.py  analysis.py  cli.py  export.py  pipeline.py  processing.py
tests/: test_pipeline.py  test_timbrematcher.py
